# animalGPT

./: Dockerfile  Movie Critic.ipynb  README.Docker.md  README.md  animal.env  bq_private_key.json  compose.yaml  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
animalgpt/: prediction.py
film_reviews_fine_tuned_v2/: model.safetensors
film_reviews_fine_tuned_v2/runs/Dec09_16-57-17_FFINM2FR073ML7H/: events.out.tfevents.1702121238.FFINM2FR073ML7H.21635.2
templates/: index.html
