[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
flask = "^3.0.0"
transformers = {extras = ["torch"], version = "^4.35.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
