[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.0.0"
langchain = "^0.1.10"
langchain-openai = "^0.0.8"
langchain-experimental = "*"
faiss-cpu = "^1.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
